--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Naty Alarcón, <span class="testimony__course">estudiante
+                        <h2 class="subtitle">Mi nombre es Natalia Alarcón, <span class="testimony__course">Estudiante
                                 de CSS.</span></h2>
                         <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
                             esse, asperiores eaque totam nulla repudiandae quasi, deserunt culpa exercitationem
@@ -166,7 +166,7 @@
 
                 <section class="testimony__body" data-id="2">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Alejandra Perez, <span class="testimony__course">estudiante de
+                        <h2 class="subtitle">Mi nombre es Alejandra Perez, <span class="testimony__course">Estudiante de
                                 CSS.</span></h2>
                         <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
                             esse, asperiores eaque laborum veniam laboriosam saepe reiciendis dolorem. Cum, ratione
@@ -180,7 +180,7 @@
 
                 <section class="testimony__body" data-id="3">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Karen Arteaga, <span class="testimony__course">estudiante de
+                        <h2 class="subtitle">Mi nombre es Karen Arteaga, <span class="testimony__course">Estudiante de
                                 CSS.</span></h2>
                         <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
                             esse, niam laboriosam saepe reiciendis dolorem. Cum, ratione voluptatum!</p>
@@ -193,7 +193,7 @@
 
                 <section class="testimony__body" data-id="4">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Kevin Ramirez, <span class="testimony__course">estudiante de
+                        <h2 class="subtitle">Mi nombre es Kevin Ramirez, <span class="testimony__course">Estudiante de
                                 CSS.</span></h2>
                         <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
                             esse, niam laboriosam saepe reiciendis dolorem. Cum, ratione voluptatum!</p>
@@ -302,7 +302,7 @@
                 <h2 class="footer__newsletter">Suscribete a la newsletter</h2>
                 <div class="footer__inputs">
                     <input type="email" placeholder="Email:" class="footer__input" name="_replyto">
-                    <input type="submit" value="Registrate" class="footer__submit">
+                    <button type="submit" class="footer__submit">Registrate</button>
                 </div>
             </form>
         </section>
